# web-server

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  GEMINI.md  README.md  main.cc
resources/: error.html  index.html  login.html  register.html  welcome.html
src/: auth_service.cc  auth_service.h  channel.cc  channel.h  epoller.cc  epoller.h  event_loop.cc  event_loop.h  event_loop_thread.cpp  event_loop_thread.h  event_loop_thread_pool.cpp  event_loop_thread_pool.h  http_conn.cc  http_conn.h  http_request.cc  http_request.h  http_response.cc  http_response.h  protocol_handler.h  rpc_handler.h  server.cc  server.h  timer.cc  timer.h
src/http/: http_conn.cc  http_conn.h  http_request.cc  http_request.h  http_response.cc  http_response.h  http_router.cc  http_router.h
src/sql/: sqlconnRAII.h  sqlconnpool.cpp  sqlconnpool.h  threadpool.h
src/util/: timer.cc  timer.h
tests/: CMakeLists.txt  test_http_request.cc  test_timer.cc
